--- a/sass/gutenberg/blocks/_core-gallery.scss
+++ b/sass/gutenberg/blocks/_core-gallery.scss
@@ -12,8 +12,8 @@
 
 // Editor fix
 figure.wp-block-gallery[data-block] {
-  margin-left: 0;
-  margin-right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .is-grid,
